[gd_scene load_steps=31 format=3 uid="uid://cw8uqs2q746kt"]

[ext_resource type="Script" uid="uid://8buuckn7446x" path="res://rooms/lab0/simple_ecs.gd" id="1_k1as7"]
[ext_resource type="Script" uid="uid://er6fwywo7pt2" path="res://data/StaticData.gd" id="2_c1wwm"]
[ext_resource type="Script" uid="uid://chkqyu06jlhl1" path="res://addons/gs_ecs/world.gd" id="2_kibt1"]
[ext_resource type="PackedScene" uid="uid://4o33ca5n1fw6" path="res://src/entities/en_player.tscn" id="2_uqay5"]
[ext_resource type="Script" uid="uid://bbwl7nukas8xi" path="res://src/systems/sy_velocity.gd" id="3_jc6jn"]
[ext_resource type="Script" uid="uid://dgoq1jekogg2j" path="res://src/systems/sy_player_input_additive.gd" id="4_8rvjo"]
[ext_resource type="PackedScene" uid="uid://hmishy6acfrk" path="res://src/entities/en_raycast_singleton.tscn" id="4_ygxyn"]
[ext_resource type="Script" uid="uid://bp8h65qilwwmj" path="res://src/systems/sy_actor_movement.gd" id="5_37rmq"]
[ext_resource type="PackedScene" uid="uid://br3o7pgduj72n" path="res://rooms/demo0/map_demo_0.tscn" id="5_a5fj4"]
[ext_resource type="PackedScene" uid="uid://ex31s4wv3adg" path="res://src/entities/en_single_server.tscn" id="7_05ds2"]
[ext_resource type="Script" uid="uid://uc0ks30tccu5" path="res://src/systems/sy_shoot_weapon.gd" id="7_in0h3"]
[ext_resource type="PackedScene" uid="uid://dqillnt7k6deb" path="res://src/entities/en_client.tscn" id="8_lebon"]
[ext_resource type="PackedScene" uid="uid://ck1h3hbitv3qy" path="res://src/entities/en_single_transport_loopback.tscn" id="9_sltp8"]
[ext_resource type="Script" uid="uid://cdwtafdybb40j" path="res://src/systems/sy_reload_weapon.gd" id="11_8yq6p"]
[ext_resource type="Script" uid="uid://f3rruwpc4f5p" path="res://src/systems/sy_health.gd" id="12_y0sey"]
[ext_resource type="Script" uid="uid://bxx7fywolhbb8" path="res://src/systems/sy_switch_weapon.gd" id="13_u7q3c"]
[ext_resource type="Script" uid="uid://dexg3hp1ug7gx" path="res://src/systems/sy_projectile_movement.gd" id="14_4neha"]
[ext_resource type="Script" uid="uid://bue4w5djbbpvl" path="res://src/network/sy_ticks.gd" id="18_tpfcl"]
[ext_resource type="Script" uid="uid://cdpld7eaexl00" path="res://src/utils/global_singletons.gd" id="25_hcmb7"]

[sub_resource type="Resource" id="Resource_w6qvj"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback_peer_register.gd"

[sub_resource type="Resource" id="Resource_ri68r"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback_connection.gd"

[sub_resource type="Resource" id="Resource_kc270"]
metadata/__load_path__ = "res://src/network/sy_state_extractor.gd"

[sub_resource type="Resource" id="Resource_okgg4"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback.gd"

[sub_resource type="Resource" id="Resource_10ekq"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback_peer_register.gd"

[sub_resource type="Resource" id="Resource_istqu"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback_connection.gd"

[sub_resource type="Resource" id="Resource_bighj"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback.gd"

[sub_resource type="Resource" id="Resource_jdoxt"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback_peer_register.gd"

[sub_resource type="Resource" id="Resource_w22y2"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback_connection.gd"

[sub_resource type="Resource" id="Resource_o22wl"]
metadata/__load_path__ = "res://src/network/sy_state_extractor.gd"

[sub_resource type="Resource" id="Resource_fvw0p"]
metadata/__load_path__ = "res://src/network/sy_transport_loopback.gd"

[node name="Lab1" type="Node2D"]
script = ExtResource("1_k1as7")

[node name="StaticData" type="Node" parent="."]
script = ExtResource("2_c1wwm")

[node name="EnMap" type="Node2D" parent="."]

[node name="MapDemo0" parent="EnMap" instance=ExtResource("5_a5fj4")]

[node name="WorldServer" type="Node" parent="."]
script = ExtResource("2_kibt1")

[node name="Singletons" type="Node" parent="WorldServer"]

[node name="EnSingleServer" parent="WorldServer/Singletons" instance=ExtResource("7_05ds2")]
singleton = true

[node name="EnSingleTransportLoopback" parent="WorldServer/Singletons" instance=ExtResource("9_sltp8")]
singleton = true

[node name="EnRaycastSingleton" parent="WorldServer/Singletons" instance=ExtResource("4_ygxyn")]

[node name="Entities" type="Node" parent="WorldServer"]

[node name="SystemsGameplay" type="Node" parent="WorldServer"]

[node name="SyVelocity" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("3_jc6jn")

[node name="SyPlayerInput" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("4_8rvjo")

[node name="SyActorMovement" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("5_37rmq")

[node name="SyShootWeapon" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("7_in0h3")

[node name="SyReloadWeapon" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("11_8yq6p")

[node name="SySwitchWeapon" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("13_u7q3c")

[node name="SyHealth" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("12_y0sey")

[node name="SyProjectileMovement" type="Node" parent="WorldServer/SystemsGameplay"]
script = ExtResource("14_4neha")

[node name="SystemsNetwork" type="Node" parent="WorldServer"]

[node name="SyTransportLoopbackPeerRegister" type="Node" parent="WorldServer/SystemsNetwork"]
script = SubResource("Resource_w6qvj")

[node name="SyTicks" type="Node" parent="WorldServer/SystemsNetwork"]
script = ExtResource("18_tpfcl")

[node name="SyTransportLoopbackConnection" type="Node" parent="WorldServer/SystemsNetwork"]
script = SubResource("Resource_ri68r")

[node name="SyStateExtractor" type="Node" parent="WorldServer/SystemsNetwork"]
script = SubResource("Resource_kc270")

[node name="SyTransportLoopback" type="Node" parent="WorldServer/SystemsNetwork"]
script = SubResource("Resource_okgg4")

[node name="WorldClient1" type="Node" parent="."]
script = ExtResource("2_kibt1")

[node name="Singletons" type="Node" parent="WorldClient1"]

[node name="EnRaycastSingleton" parent="WorldClient1/Singletons" instance=ExtResource("4_ygxyn")]

[node name="EnSingleTransportLoopback" parent="WorldClient1/Singletons" instance=ExtResource("9_sltp8")]
singleton = true

[node name="Entities" type="Node" parent="WorldClient1"]

[node name="EnClient" parent="WorldClient1/Entities" instance=ExtResource("8_lebon")]

[node name="EnPlayer2" parent="WorldClient1/Entities" instance=ExtResource("2_uqay5")]
position = Vector2(134, 228)

[node name="SystemsGameplay" type="Node" parent="WorldClient1"]

[node name="SyVelocity" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("3_jc6jn")

[node name="SyActorMovement" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("5_37rmq")

[node name="SyShootWeapon" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("7_in0h3")

[node name="SyReloadWeapon" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("11_8yq6p")

[node name="SySwitchWeapon" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("13_u7q3c")

[node name="SyHealth" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("12_y0sey")

[node name="SyProjectileMovement" type="Node" parent="WorldClient1/SystemsGameplay"]
script = ExtResource("14_4neha")

[node name="SystemsNetwork" type="Node" parent="WorldClient1"]

[node name="SyTransportLoopbackPeerRegister" type="Node" parent="WorldClient1/SystemsNetwork"]
script = SubResource("Resource_10ekq")

[node name="SyTicks" type="Node" parent="WorldClient1/SystemsNetwork"]
script = ExtResource("18_tpfcl")

[node name="SyTransportLoopbackConnection" type="Node" parent="WorldClient1/SystemsNetwork"]
script = SubResource("Resource_istqu")

[node name="SyTransportLoopback" type="Node" parent="WorldClient1/SystemsNetwork"]
script = SubResource("Resource_bighj")

[node name="SyClientProcessPackets" type="Node" parent="WorldClient1/SystemsNetwork"]

[node name="WorldBackup" type="Node" parent="."]
script = ExtResource("2_kibt1")

[node name="Singletons" type="Node" parent="WorldBackup"]

[node name="EnRaycastSingleton" parent="WorldBackup/Singletons" instance=ExtResource("4_ygxyn")]

[node name="EnSingleServer" parent="WorldBackup/Singletons" instance=ExtResource("7_05ds2")]
singleton = true

[node name="EnSingleTransportLoopback" parent="WorldBackup/Singletons" instance=ExtResource("9_sltp8")]
singleton = true

[node name="Entities" type="Node" parent="WorldBackup"]

[node name="EnClient" parent="WorldBackup/Entities" instance=ExtResource("8_lebon")]

[node name="EnClient2" parent="WorldBackup/Entities" instance=ExtResource("8_lebon")]

[node name="SystemsGameplay" type="Node" parent="WorldBackup"]

[node name="SyVelocity" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("3_jc6jn")

[node name="SyPlayerInput" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("4_8rvjo")

[node name="SyActorMovement" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("5_37rmq")

[node name="SyShootWeapon" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("7_in0h3")

[node name="SyReloadWeapon" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("11_8yq6p")

[node name="SySwitchWeapon" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("13_u7q3c")

[node name="SyHealth" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("12_y0sey")

[node name="SyProjectileMovement" type="Node" parent="WorldBackup/SystemsGameplay"]
script = ExtResource("14_4neha")

[node name="SystemsNetwork" type="Node" parent="WorldBackup"]

[node name="SyTransportLoopbackPeerRegister" type="Node" parent="WorldBackup/SystemsNetwork"]
script = SubResource("Resource_jdoxt")

[node name="SyTicks" type="Node" parent="WorldBackup/SystemsNetwork"]
script = ExtResource("18_tpfcl")

[node name="SyTransportLoopbackConnection" type="Node" parent="WorldBackup/SystemsNetwork"]
script = SubResource("Resource_w22y2")

[node name="SyStateExtractor" type="Node" parent="WorldBackup/SystemsNetwork"]
script = SubResource("Resource_o22wl")

[node name="SyTransportLoopback" type="Node" parent="WorldBackup/SystemsNetwork"]
script = SubResource("Resource_fvw0p")

[node name="SyClientProcessPackets" type="Node" parent="WorldBackup/SystemsNetwork"]

[node name="WorldOld" type="Node" parent="."]
script = ExtResource("2_kibt1")

[node name="EntitySingletons" type="Node" parent="WorldOld"]
script = ExtResource("25_hcmb7")

[node name="EnRaycastSingleton" parent="WorldOld/EntitySingletons" instance=ExtResource("4_ygxyn")]

[node name="Entities" type="Node" parent="WorldOld"]

[node name="EnPlayer2" parent="WorldOld/Entities" instance=ExtResource("2_uqay5")]
visible = false
position = Vector2(134, 228)

[node name="SyVelocity" type="Node" parent="WorldOld"]
script = ExtResource("3_jc6jn")

[node name="SyPlayerInput" type="Node" parent="WorldOld"]
script = ExtResource("4_8rvjo")

[node name="SyActorMovement" type="Node" parent="WorldOld"]
script = ExtResource("5_37rmq")

[node name="SyShootWeapon" type="Node" parent="WorldOld"]
script = ExtResource("7_in0h3")

[node name="SyReloadWeapon" type="Node" parent="WorldOld"]
script = ExtResource("11_8yq6p")

[node name="SyProjectileMovement" type="Node" parent="WorldOld"]
script = ExtResource("14_4neha")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" parent="CanvasLayer"]
